# enrichai-assistant-extension

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  errors.py  main.py  schemas.py
backend/app/llm/: openai_client.py
backend/app/routers/: extract.py  summarize.py
backend/app/tasks/: extract.py  summarize.py
backend/tests/: test_extract_route.py  test_extract_schemas.py  test_extract_task.py  test_middleware.py  test_openai_client.py  test_summarize_route.py  test_summarize_task.py
docs/superpowers/plans/: 2026-07-13-backend-summarizer-api.md  2026-07-13-extension-client.md  2026-07-15-multi-value-attribute-classification.md
docs/superpowers/specs/: 2026-07-13-ai-chrome-extension-summarizer-design.md  2026-07-15-multi-value-attribute-classification-design.md
extension/: manifest.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
extension/src/: constants.test.ts  constants.ts  vite-env.d.ts
extension/src/background/: index.ts
extension/src/content/: index.test.ts  index.ts
extension/src/lib/: api.test.ts  api.ts  clean.test.ts  clean.ts  extract.ts  guidelineParser.test.ts  guidelineParser.ts  observer.test.ts  observer.ts  panel.test.ts  panel.ts  productParser.test.ts  productParser.ts  reinject.test.ts  reinject.ts  restricted.test.ts  restricted.ts  site.test.ts  site.ts  state.test.ts  state.ts  storage.test.ts  storage.ts  urlContext.test.ts  urlContext.ts
extension/src/sidepanel/: App.tsx  index.html
(+1 files in other folders)
