[project]
name = "ai-extension-backend"
version = "0.1.0"
description = "Backend proxy for the AI page summarizer extension"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
